# CommandToolKit

./: CMakeLists.txt  LICENSE.txt  README.md  cpp.hint
example/: ex.txt
include/ctk/: ctk.h  ctkDllApi.h  ctkGuard.h  ctkIO.h  ctkInstance.h  ctkManifest.h  ctkResult.h  ctkType.h  ctkValue.h
include/ctk/Interpreter/: ctkCmdTokeniser.h  ctkITokeniser.h  ctkManifestTokeniser.h
include/ctk/cpp/: ctk.hpp
include/ctk/impl/: ctkGuardWatch.h  ctkInstanceImpl.h  ctkManifestImpl.h  ctkString.h
include/ctk/impl/Interpreter/: ctkCmdTokeniser.h  ctkITokeniser.h  ctkManifestTokeniser.h  ctkToken.h
src/ctk/: ctkGuard.cpp  ctkIO.cpp  ctkInstance.cpp  ctkManifest.cpp  ctkResult.cpp
src/ctk/impl/: ctkGuardWatch.cpp  ctkInstanceImpl.cpp  ctkManifestImpl.cpp  ctkString.cpp
src/ctk/impl/cpp/: cpp_ctk.cpp
src/ctk/impl/interpreter/: ctkCmdTokeniser.cpp  ctkManifestTokeniser.cpp
src/ctk/interpreter/: ctkCmdTokeniser.cpp  ctkManifestTokeniser.cpp
testing/: CMakeLists.txt  main.c  main.cpp
